src/objects/Credit_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Quantity__c</fullName>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_End_Date__c</fullName>
        <label>Charge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_End_for_Conga__c</fullName>
        <formula>TEXT(Charge_End_Date__c ) &amp; &quot; 12:00 AM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge End for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Start_Date__c</fullName>
        <label>Charge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Start_for_Conga__c</fullName>
        <formula>TEXT( Charge_Start_Date__c ) &amp; &quot; 12:00 AM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Start for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_End_Date__c</fullName>
        <description>This is the date that the subscription has been credited until.</description>
        <label>Credit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Date__c</fullName>
        <formula>Credit_Note__r.Credit_Note_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <label>Credit Note</label>
        <referenceTo>Credit_Note__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Start_Date__c</fullName>
        <description>This is the date at which the credit began</description>
        <label>Credit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Type_Applied__c</fullName>
        <description>This field is used when partial credit is applied.
Amount - when you explicitly specify a credit amount
Date - when you want the system to calculate the credit based on the dates (applies only for subscriptions)
Both - when you explicitly specify a credit amount but you want the revrec to allocate it to the mentioned period</description>
        <inlineHelpText>Used for partial credit
Amount - explicitly specify a credit amount
Date - system would calculate the credit based on the dates (applies only for subscriptions)
Both - specify a credit amount but revrec is allocated to specified period</inlineHelpText>
        <label>Credit Type Applied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                    <default>true</default>
                    <label>Amount</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Obsolete Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Reason_for_Revenue_Recognition__c</fullName>
        <label>Error Reason for Revenue Recognition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>Invoice_Line__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineName__c</fullName>
        <formula>Invoice_Line__r.Line_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Name New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Name__c</fullName>
        <label>Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_City__c</fullName>
        <formula>Invoice_Line__r.Master_Order_Billing_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_Country__c</fullName>
        <formula>Invoice_Line__r.Master_Order_Billing_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_Postal_Code__c</fullName>
        <formula>Invoice_Line__r.Master_Order_Billing_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_State__c</fullName>
        <formula>Invoice_Line__r.Master_Order_Billing_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Billing_Street__c</fullName>
        <formula>Invoice_Line__r.Master_Order_Billing_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Customer_VAT_Number__c</fullName>
        <formula>Invoice_Line__r.Master_Order_Customer_VAT_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order Customer VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Line_Amount__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceType__c</fullName>
        <formula>Invoice_Line__r.BillingPeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Type New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</description>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Price_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <description>This will specify whether price is default type or tiered type.</description>
        <inlineHelpText>This will specify whether price is default type or tiered type.</inlineHelpText>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Invoice_Line__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev_Recog__c</fullName>
        <label>Rev Recog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueRecognitionRuleNew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule New</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Credit Lines (Revenue Recognition Rule New)</relationshipLabel>
        <relationshipName>Credit_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Credit Lines</relationshipLabel>
        <relationshipName>Credit_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Status__c</fullName>
        <label>Revenue Recognition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Revenue_Recognition_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sl No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Item Created</fullName>
                    <isActive>false</isActive>
                    <label>Item Created</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <formula>Invoice_Line__r.Subscription_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Line_Value__c</fullName>
        <formula>Line_Amount__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Name__c</fullName>
        <formula>Invoice_Line__r.Vessel_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vessel Name</label>
        <type>Text</type>
    </fields>
    <label>Credit Line</label>
    <nameField>
        <label>Credit Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>